--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.9"
+  }
 }
